--- a/Project1/nbproject/project.properties
+++ b/Project1/nbproject/project.properties
@@ -31,7 +31,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.toplink.classpath}
     ${libs.absolutelayout.classpath}
 =======
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
