--- a/Project1/nbproject/project.properties
+++ b/Project1/nbproject/project.properties
@@ -26,13 +26,15 @@ dist.jar=${dist.dir}/Project1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_22\\lib\\mysql-connector-java-5.1.44-bin.jar
 file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\user\\Downloads\\mysql-connector-java-8.0.25\\mysql-connector-java-8.0.25\\mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.toplink.classpath}
+    ${libs.toplink.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
     ${libs.absolutelayout.classpath}
 =======
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
