--- a/Project1/nbproject/project.properties
+++ b/Project1/nbproject/project.properties
@@ -28,13 +28,15 @@ endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_22\\lib\\mysql-connector-java-5.1.44-bin.jar
 file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\user\\Downloads\\mysql-connector-java-8.0.25\\mysql-connector-java-8.0.25\\mysql-connector-java-8.0.25.jar
+file.reference.rs2xml.jar=C:\\Users\\user\\Downloads\\rs2xml\\rs2xml\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
     ${libs.absolutelayout.classpath}:\
     ${libs.toplink.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
+    ${file.reference.rs2xml.jar}
     ${libs.absolutelayout.classpath}
 =======
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
